# rust-binary-transmission

./: .gitignore
receiver/: Cargo.toml
receiver/src/: main.rs  receiver.rs
transmitter/: Cargo.toml
transmitter/src/: main.rs  transmitter.rs
