[package]
name = "receiver"
version = "0.1.0"
authors = ["Shardul Vaidya <cam.v737@gmail.com>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
rustyline = "7.1.0"
rayon = "1.5.0"
sysfs_gpio = "0.5.4"
futures = "0.3.8"