[package]
name = "transmitter"
version = "0.1.0"
authors = ["Shardul Vaidya <cam.v737@gmail.com>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
rustyline = "7.1.0"
tokio = { version = "1", features = ["full"] }
sysfs_gpio = "0.5.4"
futures = "0.3.8"
signal-hook = "0.3.1"
signal-hook-tokio = "0.2.0"